# tpm2sh

./: .gitignore  Cargo.toml  README.md
docs/: tpm2key.asn1
scripts/: make-release  rustc-error
src/: arg_parser.rs  arguments.rs  cli.rs  command.rs  command_io.rs  context.rs  crypto.rs  device.rs  error.rs  formats.rs  help.txt  key.rs  lib.rs  main.rs  mocktpm.rs  options.txt  parser.rs  pcr.rs  policy.rs  pretty_printer.rs  print.rs  schema.rs  session.pest  session.rs  tpm.rs  transport.rs  uri.pest  uri.rs  usage.txt  util.rs
src/command/: algorithms.rs  context.rs  convert.rs  create_primary.rs  delete.rs  import.rs  load.rs  mod.rs  objects.rs  pcr_event.rs  pcr_read.rs  pcr_selection.pest  policy.pest  policy.rs  print_error.rs  print_stack.rs  reset_lock.rs  save.rs  seal.rs  start_session.rs  unseal.rs
src/command/algorithms/: help.txt  mod.rs  usage.txt
src/command/convert/: arguments.txt  help.txt  mod.rs  summary.txt  usage.txt
src/command/create-primary/: arguments.txt  help.txt  mod.rs  options.txt  summary.txt  usage.txt
src/command/delete/: arguments.txt  help.txt  mod.rs  summary.txt  usage.txt
src/command/import/: help.txt  mod.rs  usage.txt
src/command/list/: arguments.txt  help.txt  mod.rs  summary.txt  usage.txt
src/command/load/: arguments.txt  help.txt  mod.rs  options.txt  summary.txt  usage.txt
src/command/objects/: help.txt  mod.rs  usage.txt
src/command/pcr-event/: arguments.txt  help.txt  mod.rs  summary.txt  usage.txt
src/command/pcr-read/: arguments.txt  help.txt  mod.rs  summary.txt  usage.txt
src/command/policy/: arguments.txt  help.txt  mod.rs  options.txt  summary.txt  usage.txt
src/command/print-error/: arguments.txt  help.txt  mod.rs  summary.txt  usage.txt
src/command/reset-lock/: help.txt  mod.rs  summary.txt  usage.txt
src/command/save/: help.txt  mod.rs  usage.txt
src/command/seal/: arguments.txt  help.txt  mod.rs  options.txt  summary.txt  usage.txt
src/command/start-session/: help.txt  mod.rs  options.txt  summary.txt  usage.txt
src/command/unseal/: arguments.txt  help.txt  mod.rs  options.txt  summary.txt  usage.txt
src/pipeline/: io.rs  mod.rs  schema.rs
tests/: dynamic.rs  integration_test.rs  parser.rs  policy.rs  session.rs  uri.rs
