[package]
name = "tpm2sh"
description = "TPM 2.0 shell"
version = "0.11.0"
license = "GPL-3.0-or-later"
homepage = "https://github.com/puavo-org/tpm2sh.git"
repository = "https://github.com/puavo-org/tpm2sh.git"
authors = ["Jarkko Sakkinen <jarkko.sakkinen@opinsys.com>"]
edition = "2021"
rust-version = "1.78"
readme = "README.md"

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "tpm2sh"
path = "src/main.rs"

[[test]]
name = "parser"
path = "tests/parser.rs"
harness = true

[[test]]
name = "integration-test"
path = "tests/integration_test.rs"
harness = true

[[test]]
name = "session"
path = "tests/session.rs"
harness = true

[[test]]
name = "uri"
path = "tests/uri.rs"
harness = true

[dependencies]
aes = "0.8"
base64 = "0.22"
cfb-mode = "0.8"
cipher = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
const-oid = { version = "0.9", features = ["db"] }
ctrlc = "3.4"
directories = "6.0"
env_logger = "0.11"
hex = "0.4"
hmac = "0.12"
log = "0.4"
nom = "7.1"
num-traits = "0.2"
p256 = { version = "0.13", features = ["ecdh"] }
p384 = { version = "0.13", features = ["ecdh"] }
p521 = { version = "0.13", features = ["ecdh"] }
pem = "3.0"
pkcs8 = { version = "0.10", features = ["pem", "alloc"] }
polling = "3.10"
rand = "0.8"
regex = "1.11"
rsa = { version = "0.9", features = ["sha1", "sha2"] }
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2.0"
tpm2-protocol = "0.10"
url = "2.5"

[dev-dependencies]
rstest = "0.26"
tempfile = "3.21"
